--- a/Geonet/app/src/main/res/values/strings.xml
+++ b/Geonet/app/src/main/res/values/strings.xml
@@ -6,12 +6,14 @@
     <string name="action_logout">Cerrar Sesion</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="action_settings">Ajustes</string>
-
+    <string name="action_addfriend">Añadir Contacto</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">Settings</string>
     <string name="config_title">Ajustes</string>
     <string name="config_interval_explanation">Ajusta el intervalo de tiempo para reportar tus ubicaciones. Ayuda a un menor consumo de bateria y datos.</string>
+    <string name="add_friend_input_email_message">Ingrese el correo del contacto</string>
+    <string name="action_friendrequest">Solicitudes de Contacto</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
@@ -35,7 +37,29 @@
         <item>600000</item>
         <item>900000</item>
         <item>1800000</item>
+        <item>3600000</item>
     </integer-array>
+
+    <string-array name="pref_sync_distance_titles">
+
+        <item>Cualquier distancia</item>
+        <item>1 metro</item>
+        <item>10 metros</item>
+        <item>20 metros</item>
+        <item>50 metros</item>
+        <item>100 metros</item>
+    </string-array>
+    <integer-array name="pref_sync_distance_values">
+
+        <item>0</item>
+        <item>1</item>
+        <item>10</item>
+        <item>20</item>
+        <item>50</item>
+        <item>100</item>
+    </integer-array>
+    <string name="title_activity_new_group">NewGroupActivity</string>
+    <string name="eventlabeldescription">Ubicaciones de hoy.\nPara agregar un evento mantén presionado un punto del mapa.</string>
 
 
 </resources>
